namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: roommate
    labels:
        name: roommate
        environment: production
