database.yaml
apiVersion: v1
kind: Service
metadata:
    name: mongo-headless
    namespace: roommate
    labels:
        app: mongo
spec:
    clusterIP: None
    ports:
        - port: 27017
          targetPort: 27017
          name: mongodb
    selector:
        app: mongo

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: mongo
    namespace: roommate
spec:
    serviceName: mongo-headless
    replicas: 1 # Start with a single replica
    selector:
        matchLabels:
            app: mongo
    template:
        metadata:
            labels:
                app: mongo
        spec:
            containers:
                - name: mongo
                  image: mongo:4.2.0
                  command:
                      - "mongod"
                      - "--bind_ip_all"
                      - "--replSet"
                      - "rs0"
                      - "--keyFile"
                      - "/etc/mongodb/mongo-keyfile"
                      - "--auth"
                  ports:
                      - containerPort: 27017
                        name: mongodb
                  volumeMounts:
                      - name: mongo-data
                        mountPath: /data/db
                      - name: mongo-init
                        mountPath: /docker-entrypoint-initdb.d
                        readOnly: true
                      - name: mongo-config
                        mountPath: /etc/mongo
                        readOnly: true
                      - name: mongo-keyfile
                        mountPath: /etc/mongodb
                        readOnly: true
                  resources:
                      requests:
                          memory: "256Mi"
                          cpu: "200m"
                      limits:
                          memory: "512Mi"
                          cpu: "500m"

            volumes:
                - name: mongo-init
                  configMap:
                      name: mongo-init
                - name: mongo-config
                  configMap:
                      name: mongo-config
                - name: mongo-keyfile
                  secret:
                      secretName: mongo-keyfile
                      defaultMode: 0400
    volumeClaimTemplates:
        - metadata:
              name: mongo-data
          spec:
              accessModes: ["ReadWriteOnce"]
              storageClassName: "standard"
              resources:
                  requests:
                      storage: 1Gi
