frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: roommate-frontend
    namespace: roommate
    labels:
        app: roommate
        component: frontend
spec:
    replicas: 1
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 0
    selector:
        matchLabels:
            app: roommate
            component: frontend
    template:
        metadata:
            labels:
                app: roommate
                component: frontend
        spec:
            containers:
                - name: roommate-frontend-container
                  image: montulll/clientr8:latest
                  ports:
                      - containerPort: 3000
                        name: http
                  resources:
                      requests:
                          memory: "256Mi"
                          cpu: "100m"
                      limits:
                          memory: "512Mi"
                          cpu: "300m"

---
apiVersion: v1
kind: Service
metadata:
    name: roommate-frontend-service
    namespace: roommate
    labels:
        app: roommate
        component: frontend
spec:
    type: ClusterIP
    ports:
        - port: 3000
          targetPort: 3000
          name: frontend-port
    selector:
        app: roommate
        component: frontend
