ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: roommate-ingress
    namespace: roommate
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
        nginx.ingress.kubernetes.io/use-regex: "true"
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
    rules:
        - host: roommate.local
          http:
              paths:
                  - path: /api/?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: roommate-backend-service
                            port:
                                number: 3001
                  - path: /(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: roommate-frontend-service
                            port:
                                number: 3000
